common: ensure the current language has a display name in the model

https://bugzilla.gnome.org/show_bug.cgi?id=702344